[project]
name = "multi-agent"
version = "0.1.0"
description = "Intelligent multi-agent system for API job management and automated debugging"
readme = "README.md"
authors = [
    { name = "Juanje Ojeda", email = "juanje@redhat.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain>=0.3,<0.4",
    "langchain-ollama>=0.2.2,<0.3.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "click>=8.0.0",
    "ollama>=0.4.4,<1.0.0",
]

[project.scripts]
multi-agent = "multi_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
    "mypy>=1.17.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
]
